piano app section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Metronic", "Rajhi"]
+  "cSpell.words": ["Adwat", "Metronic", "Rajhi"],
+  "liveServer.settings.port": 5501
 }
