--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["Adwat", "Metronic", "Rajhi"],
+  "cSpell.words": ["Adwat", "Laravel", "Metronic", "Rajhi"],
   "liveServer.settings.port": 5501
 }
